// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLinks authed Sourcegraph.com /foo 1`] = `
<ul
  className="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    className="nav-item d-sm-none"
  >
    <AnchorLink
      className="nav-link"
      to="/search"
    >
      Search
    </AnchorLink>
  </li>
  <WebActionsNavItems
    authenticatedUser={
      Object {
        "username": "u",
      }
    }
    extensionsController={
      Object {
        "executeCommand": [Function],
        "services": Object {},
      }
    }
    history="[History]"
    interactiveSearchMode={false}
    isLightTheme={true}
    isSourcegraphDotCom={false}
    keyboardShortcuts={Array []}
    location="[Location path=/foo]"
    menu="global/nav"
    onThemePreferenceChange={[Function]}
    platformContext={
      Object {
        "forceUpdateTooltip": [Function],
        "settings": "[Observable]",
      }
    }
    settingsCascade={
      Object {
        "final": null,
        "subjects": null,
      }
    }
    showCampaigns={true}
    showDotComMarketing={true}
    splitSearchModes={false}
    telemetryService={
      EventLogger {
        "anonUid": undefined,
        "hasStrippedQueryParameters": false,
      }
    }
    themePreference="light"
    toggleSearchMode={[Function]}
  />
  <li
    className="nav-item"
  >
    <AnchorLink
      className="nav-link"
      to="/explore"
    >
      <Memo(CompassOutlineIcon)
        className="icon-inline"
      />
       Explore
    </AnchorLink>
  </li>
  <li
    className="nav-item"
  >
    <CampaignsNavItem />
  </li>
  <li
    className="nav-item"
  >
    <WebCommandListPopoverButton
      authenticatedUser={
        Object {
          "username": "u",
        }
      }
      buttonClassName="nav-link btn btn-link"
      extensionsController={
        Object {
          "executeCommand": [Function],
          "services": Object {},
        }
      }
      history="[History]"
      interactiveSearchMode={false}
      isLightTheme={true}
      isSourcegraphDotCom={false}
      keyboardShortcutForShow={
        Object {
          "id": "commandPalette",
          "keybindings": Array [
            Object {
              "held": Array [
                "Control",
              ],
              "ordered": Array [
                "p",
              ],
            },
            Object {
              "ordered": Array [
                "F1",
              ],
            },
            Object {
              "held": Array [
                "Alt",
              ],
              "ordered": Array [
                "x",
              ],
            },
          ],
          "title": "Show command palette",
        }
      }
      keyboardShortcuts={Array []}
      location="[Location path=/foo]"
      menu="commandPalette"
      onThemePreferenceChange={[Function]}
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      settingsCascade={
        Object {
          "final": null,
          "subjects": null,
        }
      }
      showCampaigns={true}
      showDotComMarketing={true}
      splitSearchModes={false}
      telemetryService={
        EventLogger {
          "anonUid": undefined,
          "hasStrippedQueryParameters": false,
        }
      }
      themePreference="light"
      toggleSearchMode={[Function]}
    />
  </li>
  <li
    className="nav-item"
  >
    <UserNavItem
      authenticatedUser={
        Object {
          "username": "u",
        }
      }
      extensionsController={
        Object {
          "executeCommand": [Function],
          "services": Object {},
        }
      }
      history="[History]"
      interactiveSearchMode={false}
      isLightTheme={true}
      isSourcegraphDotCom={false}
      keyboardShortcutForSwitchTheme={
        Object {
          "id": "switchTheme",
          "keybindings": Array [
            Object {
              "held": Array [
                "Alt",
              ],
              "ordered": Array [
                "t",
              ],
            },
          ],
          "title": "Switch color theme",
        }
      }
      keyboardShortcuts={Array []}
      location="[Location path=/foo]"
      onThemePreferenceChange={[Function]}
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      settingsCascade={
        Object {
          "final": null,
          "subjects": null,
        }
      }
      showCampaigns={true}
      showDotComMarketing={true}
      splitSearchModes={false}
      telemetryService={
        EventLogger {
          "anonUid": undefined,
          "hasStrippedQueryParameters": false,
        }
      }
      themePreference="light"
      toggleSearchMode={[Function]}
    />
  </li>
</ul>
`;

exports[`NavLinks authed Sourcegraph.com /search 1`] = `
<ul
  className="nav-links nav align-items-center pl-2 pr-1"
>
  <WebActionsNavItems
    authenticatedUser={
      Object {
        "username": "u",
      }
    }
    extensionsController={
      Object {
        "executeCommand": [Function],
        "services": Object {},
      }
    }
    history="[History]"
    interactiveSearchMode={false}
    isLightTheme={true}
    isSourcegraphDotCom={false}
    keyboardShortcuts={Array []}
    location="[Location path=/search]"
    menu="global/nav"
    onThemePreferenceChange={[Function]}
    platformContext={
      Object {
        "forceUpdateTooltip": [Function],
        "settings": "[Observable]",
      }
    }
    settingsCascade={
      Object {
        "final": null,
        "subjects": null,
      }
    }
    showCampaigns={true}
    showDotComMarketing={true}
    splitSearchModes={false}
    telemetryService={
      EventLogger {
        "anonUid": undefined,
        "hasStrippedQueryParameters": false,
      }
    }
    themePreference="light"
    toggleSearchMode={[Function]}
  />
  <li
    className="nav-item"
  >
    <AnchorLink
      className="nav-link"
      to="/explore"
    >
      <Memo(CompassOutlineIcon)
        className="icon-inline"
      />
       Explore
    </AnchorLink>
  </li>
  <li
    className="nav-item"
  >
    <CampaignsNavItem />
  </li>
  <li
    className="nav-item"
  >
    <WebCommandListPopoverButton
      authenticatedUser={
        Object {
          "username": "u",
        }
      }
      buttonClassName="nav-link btn btn-link"
      extensionsController={
        Object {
          "executeCommand": [Function],
          "services": Object {},
        }
      }
      history="[History]"
      interactiveSearchMode={false}
      isLightTheme={true}
      isSourcegraphDotCom={false}
      keyboardShortcutForShow={
        Object {
          "id": "commandPalette",
          "keybindings": Array [
            Object {
              "held": Array [
                "Control",
              ],
              "ordered": Array [
                "p",
              ],
            },
            Object {
              "ordered": Array [
                "F1",
              ],
            },
            Object {
              "held": Array [
                "Alt",
              ],
              "ordered": Array [
                "x",
              ],
            },
          ],
          "title": "Show command palette",
        }
      }
      keyboardShortcuts={Array []}
      location="[Location path=/search]"
      menu="commandPalette"
      onThemePreferenceChange={[Function]}
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      settingsCascade={
        Object {
          "final": null,
          "subjects": null,
        }
      }
      showCampaigns={true}
      showDotComMarketing={true}
      splitSearchModes={false}
      telemetryService={
        EventLogger {
          "anonUid": undefined,
          "hasStrippedQueryParameters": false,
        }
      }
      themePreference="light"
      toggleSearchMode={[Function]}
    />
  </li>
  <li
    className="nav-item"
  >
    <UserNavItem
      authenticatedUser={
        Object {
          "username": "u",
        }
      }
      extensionsController={
        Object {
          "executeCommand": [Function],
          "services": Object {},
        }
      }
      history="[History]"
      interactiveSearchMode={false}
      isLightTheme={true}
      isSourcegraphDotCom={false}
      keyboardShortcutForSwitchTheme={
        Object {
          "id": "switchTheme",
          "keybindings": Array [
            Object {
              "held": Array [
                "Alt",
              ],
              "ordered": Array [
                "t",
              ],
            },
          ],
          "title": "Switch color theme",
        }
      }
      keyboardShortcuts={Array []}
      location="[Location path=/search]"
      onThemePreferenceChange={[Function]}
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      settingsCascade={
        Object {
          "final": null,
          "subjects": null,
        }
      }
      showCampaigns={true}
      showDotComMarketing={true}
      splitSearchModes={false}
      telemetryService={
        EventLogger {
          "anonUid": undefined,
          "hasStrippedQueryParameters": false,
        }
      }
      themePreference="light"
      toggleSearchMode={[Function]}
    />
  </li>
</ul>
`;

exports[`NavLinks authed self-hosted /foo 1`] = `
<ul
  className="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    className="nav-item d-sm-none"
  >
    <AnchorLink
      className="nav-link"
      to="/search"
    >
      Search
    </AnchorLink>
  </li>
  <WebActionsNavItems
    authenticatedUser={
      Object {
        "username": "u",
      }
    }
    extensionsController={
      Object {
        "executeCommand": [Function],
        "services": Object {},
      }
    }
    history="[History]"
    interactiveSearchMode={false}
    isLightTheme={true}
    isSourcegraphDotCom={false}
    keyboardShortcuts={Array []}
    location="[Location path=/foo]"
    menu="global/nav"
    onThemePreferenceChange={[Function]}
    platformContext={
      Object {
        "forceUpdateTooltip": [Function],
        "settings": "[Observable]",
      }
    }
    settingsCascade={
      Object {
        "final": null,
        "subjects": null,
      }
    }
    showCampaigns={true}
    showDotComMarketing={false}
    splitSearchModes={false}
    telemetryService={
      EventLogger {
        "anonUid": undefined,
        "hasStrippedQueryParameters": false,
      }
    }
    themePreference="light"
    toggleSearchMode={[Function]}
  />
  <li
    className="nav-item"
  >
    <AnchorLink
      className="nav-link"
      to="/explore"
    >
      <Memo(CompassOutlineIcon)
        className="icon-inline"
      />
       Explore
    </AnchorLink>
  </li>
  <li
    className="nav-item"
  >
    <CampaignsNavItem />
  </li>
  <li
    className="nav-item"
  >
    <WebCommandListPopoverButton
      authenticatedUser={
        Object {
          "username": "u",
        }
      }
      buttonClassName="nav-link btn btn-link"
      extensionsController={
        Object {
          "executeCommand": [Function],
          "services": Object {},
        }
      }
      history="[History]"
      interactiveSearchMode={false}
      isLightTheme={true}
      isSourcegraphDotCom={false}
      keyboardShortcutForShow={
        Object {
          "id": "commandPalette",
          "keybindings": Array [
            Object {
              "held": Array [
                "Control",
              ],
              "ordered": Array [
                "p",
              ],
            },
            Object {
              "ordered": Array [
                "F1",
              ],
            },
            Object {
              "held": Array [
                "Alt",
              ],
              "ordered": Array [
                "x",
              ],
            },
          ],
          "title": "Show command palette",
        }
      }
      keyboardShortcuts={Array []}
      location="[Location path=/foo]"
      menu="commandPalette"
      onThemePreferenceChange={[Function]}
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      settingsCascade={
        Object {
          "final": null,
          "subjects": null,
        }
      }
      showCampaigns={true}
      showDotComMarketing={false}
      splitSearchModes={false}
      telemetryService={
        EventLogger {
          "anonUid": undefined,
          "hasStrippedQueryParameters": false,
        }
      }
      themePreference="light"
      toggleSearchMode={[Function]}
    />
  </li>
  <li
    className="nav-item"
  >
    <UserNavItem
      authenticatedUser={
        Object {
          "username": "u",
        }
      }
      extensionsController={
        Object {
          "executeCommand": [Function],
          "services": Object {},
        }
      }
      history="[History]"
      interactiveSearchMode={false}
      isLightTheme={true}
      isSourcegraphDotCom={false}
      keyboardShortcutForSwitchTheme={
        Object {
          "id": "switchTheme",
          "keybindings": Array [
            Object {
              "held": Array [
                "Alt",
              ],
              "ordered": Array [
                "t",
              ],
            },
          ],
          "title": "Switch color theme",
        }
      }
      keyboardShortcuts={Array []}
      location="[Location path=/foo]"
      onThemePreferenceChange={[Function]}
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      settingsCascade={
        Object {
          "final": null,
          "subjects": null,
        }
      }
      showCampaigns={true}
      showDotComMarketing={false}
      splitSearchModes={false}
      telemetryService={
        EventLogger {
          "anonUid": undefined,
          "hasStrippedQueryParameters": false,
        }
      }
      themePreference="light"
      toggleSearchMode={[Function]}
    />
  </li>
</ul>
`;

exports[`NavLinks authed self-hosted /search 1`] = `
<ul
  className="nav-links nav align-items-center pl-2 pr-1"
>
  <WebActionsNavItems
    authenticatedUser={
      Object {
        "username": "u",
      }
    }
    extensionsController={
      Object {
        "executeCommand": [Function],
        "services": Object {},
      }
    }
    history="[History]"
    interactiveSearchMode={false}
    isLightTheme={true}
    isSourcegraphDotCom={false}
    keyboardShortcuts={Array []}
    location="[Location path=/search]"
    menu="global/nav"
    onThemePreferenceChange={[Function]}
    platformContext={
      Object {
        "forceUpdateTooltip": [Function],
        "settings": "[Observable]",
      }
    }
    settingsCascade={
      Object {
        "final": null,
        "subjects": null,
      }
    }
    showCampaigns={true}
    showDotComMarketing={false}
    splitSearchModes={false}
    telemetryService={
      EventLogger {
        "anonUid": undefined,
        "hasStrippedQueryParameters": false,
      }
    }
    themePreference="light"
    toggleSearchMode={[Function]}
  />
  <li
    className="nav-item"
  >
    <AnchorLink
      className="nav-link"
      to="/explore"
    >
      <Memo(CompassOutlineIcon)
        className="icon-inline"
      />
       Explore
    </AnchorLink>
  </li>
  <li
    className="nav-item"
  >
    <CampaignsNavItem />
  </li>
  <li
    className="nav-item"
  >
    <WebCommandListPopoverButton
      authenticatedUser={
        Object {
          "username": "u",
        }
      }
      buttonClassName="nav-link btn btn-link"
      extensionsController={
        Object {
          "executeCommand": [Function],
          "services": Object {},
        }
      }
      history="[History]"
      interactiveSearchMode={false}
      isLightTheme={true}
      isSourcegraphDotCom={false}
      keyboardShortcutForShow={
        Object {
          "id": "commandPalette",
          "keybindings": Array [
            Object {
              "held": Array [
                "Control",
              ],
              "ordered": Array [
                "p",
              ],
            },
            Object {
              "ordered": Array [
                "F1",
              ],
            },
            Object {
              "held": Array [
                "Alt",
              ],
              "ordered": Array [
                "x",
              ],
            },
          ],
          "title": "Show command palette",
        }
      }
      keyboardShortcuts={Array []}
      location="[Location path=/search]"
      menu="commandPalette"
      onThemePreferenceChange={[Function]}
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      settingsCascade={
        Object {
          "final": null,
          "subjects": null,
        }
      }
      showCampaigns={true}
      showDotComMarketing={false}
      splitSearchModes={false}
      telemetryService={
        EventLogger {
          "anonUid": undefined,
          "hasStrippedQueryParameters": false,
        }
      }
      themePreference="light"
      toggleSearchMode={[Function]}
    />
  </li>
  <li
    className="nav-item"
  >
    <UserNavItem
      authenticatedUser={
        Object {
          "username": "u",
        }
      }
      extensionsController={
        Object {
          "executeCommand": [Function],
          "services": Object {},
        }
      }
      history="[History]"
      interactiveSearchMode={false}
      isLightTheme={true}
      isSourcegraphDotCom={false}
      keyboardShortcutForSwitchTheme={
        Object {
          "id": "switchTheme",
          "keybindings": Array [
            Object {
              "held": Array [
                "Alt",
              ],
              "ordered": Array [
                "t",
              ],
            },
          ],
          "title": "Switch color theme",
        }
      }
      keyboardShortcuts={Array []}
      location="[Location path=/search]"
      onThemePreferenceChange={[Function]}
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      settingsCascade={
        Object {
          "final": null,
          "subjects": null,
        }
      }
      showCampaigns={true}
      showDotComMarketing={false}
      splitSearchModes={false}
      telemetryService={
        EventLogger {
          "anonUid": undefined,
          "hasStrippedQueryParameters": false,
        }
      }
      themePreference="light"
      toggleSearchMode={[Function]}
    />
  </li>
</ul>
`;

exports[`NavLinks unauthed Sourcegraph.com /foo 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item d-sm-none"
  >
    <a
      class="nav-link"
      href="/search"
    >
      Search
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Campaigns"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/extensions"
    >
      Extensions
    </a>
  </li>
  <li
    class="nav-item mx-1"
  >
    <a
      class="nav-link btn btn-primary"
      href="/sign-in"
    >
      Sign in
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="https://about.sourcegraph.com"
      rel="noopener"
      target="_blank"
    >
      About 
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/help"
      rel="noopener"
      target="_blank"
    >
      Help 
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list-popover-button btn btn-link "
      id="command-list-popover-button-3"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
</ul>
`;

exports[`NavLinks unauthed Sourcegraph.com /search 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Campaigns"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/extensions"
    >
      Extensions
    </a>
  </li>
  <li
    class="nav-item mx-1"
  >
    <a
      class="nav-link btn btn-primary"
      href="/sign-in"
    >
      Sign in
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="https://about.sourcegraph.com"
      rel="noopener"
      target="_blank"
    >
      About 
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/help"
      rel="noopener"
      target="_blank"
    >
      Help 
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list-popover-button btn btn-link "
      id="command-list-popover-button-4"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
</ul>
`;

exports[`NavLinks unauthed self-hosted /foo 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item d-sm-none"
  >
    <a
      class="nav-link"
      href="/search"
    >
      Search
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/explore"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,17L10.2,10.2L17,7L13.8,13.8L7,17M12,11.1A0.9,0.9 0 0,0 11.1,12A0.9,0.9 0 0,0 12,12.9A0.9,0.9 0 0,0 12.9,12A0.9,0.9 0 0,0 12,11.1M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
        />
      </svg>
       Explore
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Campaigns"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/extensions"
    >
      Extensions
    </a>
  </li>
  <li
    class="nav-item mx-1"
  >
    <a
      class="nav-link btn btn-primary"
      href="/sign-in"
    >
      Sign in
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/help"
      rel="noopener"
      target="_blank"
    >
      Help 
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list-popover-button btn btn-link "
      id="command-list-popover-button-1"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
</ul>
`;

exports[`NavLinks unauthed self-hosted /search 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/explore"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,17L10.2,10.2L17,7L13.8,13.8L7,17M12,11.1A0.9,0.9 0 0,0 11.1,12A0.9,0.9 0 0,0 12,12.9A0.9,0.9 0 0,0 12.9,12A0.9,0.9 0 0,0 12,11.1M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
        />
      </svg>
       Explore
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Campaigns"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/extensions"
    >
      Extensions
    </a>
  </li>
  <li
    class="nav-item mx-1"
  >
    <a
      class="nav-link btn btn-primary"
      href="/sign-in"
    >
      Sign in
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/help"
      rel="noopener"
      target="_blank"
    >
      Help 
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list-popover-button btn btn-link "
      id="command-list-popover-button-2"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
</ul>
`;
